# MissionGeometry

./: .gitignore  CMakeLists.txt  basicMath.cpp  basicTypes.cpp  coordinateTransformations.cpp  main.cpp
Basics/: CMakeLists.txt  basicMath.cpp  basicMath.h  basicTypes.cpp  basicTypes.h  constants.h  coordinateTransformations.cpp  coordinateTransformations.h
CoordinateTransformations/: CMakeLists.txt  coordinateTransformations.cpp  coordinateTransformations.h
Propagation/: CMakeLists.txt  eulerIntegrator.h  integrator.h  rk4Integrator.cpp  rk4Integrator.h
include/: basicMath.h  basicTypes.h  constants.h  coordinateTransformations.h
